checkbox fixed, aligned form items properly

--- a/pages/index.css
+++ b/pages/index.css
@@ -175,15 +175,16 @@
 .form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
   margin-bottom: 120px;
 }
 
 .form__fieldset {
   display: flex;
   flex-direction: column;
-  max-width: 385px;
+  width: 385px;
   border: none;
+  margin: 0;
   padding: 0;
 }
 
@@ -199,12 +200,14 @@
 }
 
 .form__input {
+  box-sizing: border-box;
   border-radius: 4px;
   border-color: #838383;
   margin-bottom: 32px;
   font-size: 20px;
   line-height: 30px;
   color: #000;
+  width: 385px;
   height: 60px;
   text-indent: 18px;
 }
@@ -218,6 +221,7 @@
 }
 
 .form__button {
+  box-sizing: border-box;
   border-radius: 4px;
   width: 385px;
   height: 60px;
@@ -229,10 +233,12 @@
 }
 
 .form__checkbox {
-  background-image: url(../images/check.svg);
-  background-color: #2f80ed;
   border-radius: 2px;
   width: 20px;
   height: 20px;
   margin-right: 12px;
+}
+
+.form__checkbox:checked {
+  background: url(../images/check.svg) no-repeat 0 0 #2f80ed;
 }
